crates/rome_js_formatter/tests/specs/prettier/js/no-semi-babylon-extensions/no-semi.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: no-semi.js

---
# Input
```js
a
;::b.c

class A {
  a = b;
  in
  c

  a = b;
  instanceof(){}
}

```

# Output
```js
a;
::b.c

class A {
  a = b;
  in;
  c;

  a = b;
  instanceof() {}
}

```

# Errors
```
error[SyntaxError]: expected a statement but instead found '::b.c'
  ┌─ no-semi.js:2:2
  │
2 │ ;::b.c
  │  ^^^^^ Expected a statement here


```


